made some wild changes to images
